Fix dropdown z-index in expenses

--- a/src/components/expenses-new-row/components/expenses-new-row.css
+++ b/src/components/expenses-new-row/components/expenses-new-row.css
@@ -5,6 +5,7 @@
 	position: -webkit-sticky;
 	position: sticky;
 	background-color: #ffffff;
+	z-index: 3;
 }
 
 .expenses-new-row .ui.dropdown > .text {
